# lbt_nrm_sim

./: .LICENSE.un~  .README.md.un~  .gitignore  LICENSE  README.md  pyproject.toml
lbt_nrm_sim/: __init__.py  analysis.py  apertures.py  filters.py  fringes.py  visualization.py
scripts/: make_gifs.py
